# prqlite

./: Cargo.toml  README.md
.github/workflows/: release.yaml  test.yaml
prqlite-cli/: Cargo.toml
prqlite-cli/src/: cli.rs  lib.rs  main.rs  utils.rs
prqlite-cli/src/repl/: commands.rs  consts.rs  mod.rs  simple.rs  traits.rs  tui.rs
prqlite-cli/src/repl/commands/: mod.rs
prqlite-cli/src/repl/normal/: mod.rs
prqlite-cli/src/repl/simple/: command.rs  commands.rs  mod.rs
prqlite-cli/src/repl/tui/: app.rs  coords.rs  mod.rs  ui.rs
prqlite-cli/src/repl/tui/ui/: components.rs  mod.rs
prqlite-rs/: Cargo.toml
prqlite-rs/src/: lib.rs
prqlite-rs/src/tests/: mod.rs  test_utils.rs
