[package]
name = "prqlite"
version = "1.0.0-dev"
edition = "2021"
default-run = "prqlite"
authors = ["Mohamed Emad (hulxxv@gmail.com)"]
description = "Use Sqlite with PRQL"
readme = "README.md"


[workspace]
members = [
    "prqlite-cli",
    "prqlite-rs"
]


[dependencies]
anyhow = "1.0.58"
chrono = "0.4.19"
clap = { version = "4.1.6", features = ["derive"] }
comfy-table = "6.0.0"
crossterm = "0.26.0"
derivative = "2.2.0"
env_logger = "0.10.0"
log = "0.4.17"
thiserror = "1.0.31"
tokio = { version = "1.20.1", features = ["full"] }
tui = { version = "0.19.0" }
unicode-width = "0.1.1"

prqlite-cli = {path = "./prqlite-cli"}
rusqlite = "0.29.0"


[[bin]]
path = "./prqlite-cli/src/main.rs"
name = "prqlite"


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true 