[package]
name = "prqlite-cli"
version = "1.0.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.58"
chrono = "0.4.19"
clap = {version = "3.2.16", features = ["derive"]}
comfy-table = "6.0.0"
crossterm = "0.24.0"
derivative = "2.2.0"
env_logger = "0.9.0"
log = "0.4.17"
prql-compiler = "0.2.5"
thiserror = "1.0.31"
tokio = { version = "1.20.1", features = ["full"] }
tui = { version = "0.18.0" }
unicode-width = "0.1.9"
