[package]
name = "prqlite-cli"
version = "1.0.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.58"
chrono = "0.4.19"
clap = {version = "4.1.6", features = ["derive"]}
comfy-table = "6.0.0"
crossterm = { version = "0.26.1", features = ["serde"] }
derivative = "2.2.0"
env_logger = "0.10.0"
log = "0.4.17"
prql-compiler = "0.8.1"
thiserror = "1.0.31"
tokio = { version = "1.20.1", features = ["full"] }
tui = { version = "0.19.0" }
unicode-width = "0.1.9"

prqlite-rs ={ path = "../prqlite-rs" }
regex = "1.9.1"
rusqlite = "0.29.0"
lazy_static = "1.4.0"

