[package]
name = "prqlite-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
prql-compiler = "0.8.1"
rusqlite = {version = "0.29.0", features = ["bundled"]}

[dev-dependencies]
rand = "0.8.5"
